# openmp-workshop

./: .gitignore  00_demonstration.cpp  01_parallel.cpp  03_scheduling.cpp  04_sections.cpp  05_locks.cpp  06_synchronization.cpp  07_image_processing.cpp  CMakeLists.txt  Makefile  README.md  example_00.cpp
